--- a/.env
+++ b/.env
@@ -4,4 +4,12 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=docker
 
-TIMEZONE=UTC
+DJANGO_TIMEZONE=UTC
+TELEGRAM_TIMEZONE="Europe/Moscow"
+
+TELEGRAM_TOKEN=""
+
+WEBHOOK_PATH="/"
+WEBHOOK_HOST="http://localhost:8001"
+WEBAPP_HOST=0.0.0.0
+WEBAPP_PORT=8081
