--- a/.env
+++ b/.env
@@ -7,9 +7,11 @@ POSTGRES_PASSWORD=docker
 DJANGO_TIMEZONE=UTC
 TELEGRAM_TIMEZONE="Europe/Moscow"
 
+SERVER_HOST=http://server:8000
+
 TELEGRAM_TOKEN=""
 
 WEBHOOK_PATH="/"
-WEBHOOK_HOST="http://localhost:8001"
+WEBHOOK_HOST="http://0.0.0.0:8000"
 WEBAPP_HOST=0.0.0.0
 WEBAPP_PORT=8081
